--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<p>
 			<div>
 				<i class="fas fa-phone"></i>
-				<p> Phone: (714) 853-4403</p>
+				<p> Phone Number: (714) 853-4403</p>
 			</div>
 			<div>
 				<i class="fas fa-envelope"></i>
