Completed landing page

--- a/index.html
+++ b/index.html
@@ -9,34 +9,36 @@
 	<header>
 		<img src="/assets/nickSuit.jpg" alt="Nick Osborn in a suit">
 		<h1>Nick Osborn</h1>
-		<nav>
-			<a href="index.html"><i class="fas fa-home"></i>Home</a>
-			<a href="work.html"><i class="fas fa-file-code"></i>My Work</a>
-			<a href="about.html"><i class="fas fa-user"></i>About Me</a>
-			<a href="contact.html"><i class="fas fa-envelope"></i>Contact</a>
-		</nav>
 	</header>
-
+	<nav>
+		<a href="index.html" class="active"><i class="fas fa-home"></i>Home</a>
+		<a href="work.html"><i class="fas fa-laptop"></i>My Work</a>
+		<a href="about.html"><i class="fas fa-user"></i>About Me</a>
+		<a href="contact.html"><i class="fas fa-envelope"></i>Contact</a>
+	</nav>
 	<main>
-		<section id="intro">
-			<h2>Introduction</h2>
-			<p>My name is Nick Osborn. I am currently studying Computer Science at California Baptist University and plan to graduate in December of 2024.</p>
-		</section>
+		<h2>Introduction</h2>
+		<p>Hello, my name is Nick Osborn. I am a student studying Computer Science at California Baptist University in Riverside, California. 
+			I have studies a wide variety of topics within the field and am currently working to further my knowledge with hand-on experience and projects.
+			Some of my interests within the field incldue cybersecurity, artificial intelligence, and quantum computing. 
+			Explore my page to learn more about me and what I do!
+		</p>
+		<img src="/assets/nickSuit.jpg" alt="Nick Osborn in a suit">
 	</main>
 
 	<footer>
 		<p>
-			<div>
+			<div class="contact-info">
 				<i class="fas fa-phone"></i>
 				<p> Phone Number: (714) 853-4403</p>
 			</div>
-			<div>
+			<div class="contact-info">
 				<i class="fas fa-envelope"></i>
 				<p> Email: nosborn2003@gmail.com</p>
 			</div>
-			<div>
+			<div class="contact-info">
 				<i class="fas fa-circle-down"></i>
-				<p> Download my resume</p>
+				<a href="Web Portfolio Wireframes.pdf" download="Resume"> Download my resume</a>
 			</div>
 		</p>
 	</footer>
