progress on contact and about

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<h1>Nick Osborn</h1>
 	</header>
 	<nav>
-		<a href="index.html" class="active"><i class="fas fa-home"></i>Home</a>
-		<a href="work.html"><i class="fas fa-laptop"></i>My Work</a>
-		<a href="about.html"><i class="fas fa-user"></i>About Me</a>
-		<a href="contact.html"><i class="fas fa-envelope"></i>Contact</a>
+		<a href="/index.html" class="active"><i class="fas fa-home"></i>Home</a>
+		<a href="/html/work.html"><i class="fas fa-laptop"></i>My Work</a>
+		<a href="/html/about.html"><i class="fas fa-user"></i>About Me</a>
+		<a href="/html/contact.html"><i class="fas fa-envelope"></i>Contact</a>
 	</nav>
 	<main>
 		<h2>Introduction</h2>
@@ -38,7 +38,7 @@
 			</div>
 			<div class="contact-info">
 				<i class="fas fa-circle-down"></i>
-				<a href="Web Portfolio Wireframes.pdf" download="Resume"> Download my resume</a>
+				<a href="/assets/Nick Osborn Resume.pdf" download="Nick Osborn Resume"> Download my resume</a>
 			</div>
 		</p>
 	</footer>
