My work page completed

--- a/html/about.html
+++ b/html/about.html
@@ -1,21 +1,77 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Work Experience</title>
-	<link rel="stylesheet" href="/css/style.css">
+	<title>My Personal Website</title>
+	<link rel="stylesheet" href="/css/about_style.css">
+	<link rel="icon" type="image/x-icon" href="/assets/nickSuit.jpg">
+	<script src="https://kit.fontawesome.com/4c7d3265f9.js" crossorigin="anonymous" ></script>
 </head>
 <body>
-    <header>
-      <h1>About Me</h1>
-      <nav>
-			  <a href="index.html">Introduction</a>
-			  <a href="work.html">My Work</a>
-			  <a href="about.html">About Me</a>
-        <a href="contact.html">Contact</a>
-		  </nav>
-    </header>
-    <h2>About Me</h2>
-      <h3>Personal</h3>
-        <p>I am from Fullerton, CA. I am a Christian. I have two brothers and a sister.</p>
-      <h3>Professional Interests</h3>
-        <p>I like AI and cybersecurity.</p>
+	<header>
+		<img src="/assets/nickSuit.jpg" alt="Nick Osborn in a suit">
+		<h1>Nick Osborn</h1>
+	</header>
+	<nav>
+		<a href="/index.html"><i class="fas fa-home"></i>Home</a>
+		<a href="/html/work.html"><i class="fas fa-laptop"></i>My Work</a>
+		<a href="/html/about.html" class="active"><i class="fas fa-user"></i>About Me</a>
+		<a href="/html/contact.html"><i class="fas fa-envelope"></i>Contact</a>
+	</nav>
+	<main>
+    <div class="Education">
+      <h2>Education</h2>
+      <p>I am currently studying Computer Science at California Baptist University in Riverside, California (2021-Present). 
+        I plan to graduate in Decemeber 2024. I have a 3.9 cumulative GPA. I have taken a variety of courses as can be seen below.
+      </p>
+    </div>
+    <div class ="Coursework">
+      <h2>Relevant Coursework</h2>
+      <ul>
+        <li>Java Programming</li>
+        <li>Discrete Structures</li>
+        <li>Human Computer Interaction</li>
+        <li>Operating Systems and Networking</li>
+        <li>Data Structures</li>
+        <li>Database Systems</li>
+        <li>Software Requirements, Analysis, and Testing</li>
+      </ul>
+    </div>
+    <div class="Biography">
+      <h2>Biography</h2>
+      <p>I am from Fullerton, California. </p>
+    </div>
+    <div class="Skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>Java</li>
+        <li>Python</li>
+        <li>MySQL</li>
+        <li>Dart (Flutter)</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Linux</li>
+        <li>Jira</li>
+        <li>Microsoft ADO</li>
+        <li>Figma</li>
+        <li>Agile Development</li>
+      </ul>
+    </div>
+	</main>
+	<footer>
+		<p>
+			<div class="contact-info">
+				<i class="fas fa-phone"></i>
+				<p> Phone Number: (714) 853-4403</p>
+			</div>
+			<div class="contact-info">
+				<i class="fas fa-envelope"></i>
+				<p> Email: nosborn2003@gmail.com</p>
+			</div>
+			<div class="contact-info">
+				<i class="fas fa-circle-down"></i>
+				<a href="/assets/Nick Osborn Resume.pdf" download="Nick Osborn Resume"> Download my resume</a>
+			</div>
+		</p>
+	</footer>
 </body>
+</html>
