--- a/html/contact.html
+++ b/html/contact.html
@@ -3,6 +3,7 @@
 <head>
 	<title>My Personal Website</title>
 	<link rel="stylesheet" href="/css/contact_style.css">
+	<link rel="icon" type="image/x-icon" href="/assets/nickSuit.jpg">
 	<script src="https://kit.fontawesome.com/4c7d3265f9.js" crossorigin="anonymous" ></script>
 </head>
 <body>
