--- a/html/work.html
+++ b/html/work.html
@@ -3,6 +3,7 @@
 <head>
 	<title>My Personal Website</title>
 	<link rel="stylesheet" href="/css/work_style.css">
+	<link rel="icon" type="image/x-icon" href="/assets/nickSuit.jpg">
 	<script src="https://kit.fontawesome.com/4c7d3265f9.js" crossorigin="anonymous" ></script>
 </head>
 <body>
@@ -18,10 +19,15 @@
 	</nav>
 	<main>
 		<h2>NotesGPT</h2>
-		<p>NotesGPT is an AI-assistant notetaker...</p>
-		<video src="/assets/Sprint 3-4 Progress.mp4" controls>
+		<p>NotesGPT is a mobile app AI-assistant that helps you generate and learn from your notes by
+			transcribing audio to searchable text,
+			summarizing notes/meetings using ChatGPT within app, and
+			provideing an in-app ChatGPT interface so you can ask questions and dialogue about your notes/recordings.
+			I helped develop this within a six-person team over the course of a semester. Watch this video to see how it works!
+			</p>
+		<video src="/assets/Sprint 3-4 Progress.mp4" controls></video>
+		<h3><em>More Coming Soon...</em></h3>
 	</main>
-
 	<footer>
 		<p>
 			<div class="contact-info">
