--- a/html/work.html
+++ b/html/work.html
@@ -25,7 +25,7 @@
 			provideing an in-app ChatGPT interface so you can ask questions and dialogue about your notes/recordings.
 			I helped develop this within a six-person team over the course of a semester. Watch this video to see how it works!
 			</p>
-		<video src="/assets/Sprint 3-4 Progress.mp4" controls></video>
+		<video src="/assets/NotesGPT_SpeechToText.mp4" controls></video>
 		<h3><em>More Coming Soon...</em></h3>
 	</main>
 	<footer>
