added functionality for form

--- a/html/contact.html
+++ b/html/contact.html
@@ -40,7 +40,7 @@
 				<h3><a href="/assets/Nick Osborn Resume.pdf" download="Nick Osborn Resume"> Download my resume</a></h3>
 			</div>
 		</section>		
-		<form action="send_email.php" action="/send_email.php" method="post">
+		<form action="https://formspree.io/f/mlekopow" method="post">
 			<h3>Send me a message</h3>
 			<label for="name">Name:</label>
 			<input type="text" id="name" name="name" required>
