Web portfolio completed

--- a/html/about.html
+++ b/html/about.html
@@ -12,7 +12,7 @@
 		<h1>Nick Osborn</h1>
 	</header>
 	<nav>
-		<a href="/index.html"><i class="fas fa-home"></i>Home</a>
+		<a href="/index.html" class="first"><i class="fas fa-home"></i>Home</a>
 		<a href="/html/work.html"><i class="fas fa-laptop"></i>My Work</a>
 		<a href="/html/about.html" class="active"><i class="fas fa-user"></i>About Me</a>
 		<a href="/html/contact.html"><i class="fas fa-envelope"></i>Contact</a>
@@ -38,23 +38,62 @@
     </div>
     <div class="Biography">
       <h2>Biography</h2>
-      <p>I am from Fullerton, California. </p>
+      <p>I am from Fullerton, California, where I have always lived with my family of six.
+        I like to spend my time watching sports and hanging out with friends.
+        I am a Christian and am very involved in my local church, where I currently serve in the middle school ministry. 
+      </p>
     </div>
+    <img src="/assets/nickShirt.jpg">
     <div class="Skills">
       <h2>Skills</h2>
-      <ul>
-        <li>Java</li>
-        <li>Python</li>
-        <li>MySQL</li>
-        <li>Dart (Flutter)</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Linux</li>
-        <li>Jira</li>
-        <li>Microsoft ADO</li>
-        <li>Figma</li>
-        <li>Agile Development</li>
-      </ul>
+      <div class="skill">
+        <div class="skill-label">Java</div>
+        <div class="progress-bar">
+          <div class="progress" style="width: 80%;">80%</div>
+        </div>
+      </div>
+      <div class="skill">
+        <div class="skill-label">MySQL</div>
+        <div class="progress-bar">
+          <div class="progress" style="width: 75%;">75%</div>
+        </div>
+      </div>
+      <div class="skill">
+        <div class="skill-label">HTML</div>
+        <div class="progress-bar">
+          <div class="progress" style="width: 70%;">70%</div>
+        </div>
+      </div>
+      <div class="skill">
+        <div class="skill-label">CSS</div>
+        <div class="progress-bar">
+          <div class="progress" style="width: 70%;">70%</div>
+        </div>
+      </div>
+      <div class="skill">
+        <div class="skill-label">Dart (Flutter)</div>
+        <div class="progress-bar">
+          <div class="progress" style="width: 70%;">70%</div>
+        </div>
+      </div>
+      <div class="skill">
+        <div class="skill-label">Jira</div>
+        <div class="progress-bar">
+          <div class="progress" style="width: 60%;">60%</div>
+        </div>
+      </div>
+      <div class="skill">
+        <div class="skill-label">Linux</div>
+        <div class="progress-bar">
+          <div class="progress" style="width: 50%;">50%</div>
+        </div>
+      </div>
+      <div class="skill">
+        <div class="skill-label">Figma</div>
+        <div class="progress-bar">
+          <div class="progress" style="width: 50%;">50%</div>
+        </div>
+      </div>
     </div>
 	</main>
 	<footer>
