--- a/html/contact.html
+++ b/html/contact.html
@@ -12,7 +12,7 @@
 		<h1>Nick Osborn</h1>
 	</header>
 	<nav>
-		<a href="/index.html"><i class="fas fa-home"></i>Home</a>
+		<a href="/index.html" class="first"><i class="fas fa-home"></i>Home</a>
 		<a href="/html/work.html"><i class="fas fa-laptop"></i>My Work</a>
 		<a href="/html/about.html"><i class="fas fa-user"></i>About Me</a>
 		<a href="/html/contact.html" class="active"><i class="fas fa-envelope"></i>Contact</a>
