--- a/html/about.html
+++ b/html/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Personal Website</title>
+	<title>Nick Osborn Web Portfolio</title>
 	<link rel="stylesheet" href="/css/about_style.css">
 	<link rel="icon" type="image/x-icon" href="/assets/nickSuit.jpg">
 	<script src="https://kit.fontawesome.com/4c7d3265f9.js" crossorigin="anonymous" ></script>
